@@ -1,0 +1,8 @@
+package test.listeners.issue3238;
+
+import org.testng.annotations.Test;
+
+public class TestClassWithPassingTestMethodSample {
+  @Test
+  public void testMethod() {}
+}
